methode-1/logs/dag_id=dag_with_postgres_operator_v03/run_id=scheduled__2022-10-16T00:00:00+00:00/task_id=insert_into_table/attempt=2.log
[2024-01-02T20:31:56.937+0100] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v03.insert_into_table scheduled__2022-10-16T00:00:00+00:00 [queued]>
[2024-01-02T20:31:56.944+0100] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v03.insert_into_table scheduled__2022-10-16T00:00:00+00:00 [queued]>
[2024-01-02T20:31:56.945+0100] {taskinstance.py:1361} INFO - Starting attempt 2 of 6
[2024-01-02T20:31:56.955+0100] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): insert_into_table> on 2022-10-16 00:00:00+00:00
[2024-01-02T20:31:56.957+0100] {standard_task_runner.py:57} INFO - Started process 61049 to run task
[2024-01-02T20:31:56.962+0100] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'dag_with_postgres_operator_v03', 'insert_into_table', 'scheduled__2022-10-16T00:00:00+00:00', '--job-id', '14246', '--raw', '--subdir', '/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/methode-1/dags/dag_with_postgres.py', '--cfg-path', '/var/folders/gn/cr4yj18d1tv34pkws9v_kq1r0000gn/T/tmp3dri577x']
[2024-01-02T20:31:56.965+0100] {standard_task_runner.py:85} INFO - Job 14246: Subtask insert_into_table
[2024-01-02T20:31:57.006+0100] {task_command.py:416} INFO - Running <TaskInstance: dag_with_postgres_operator_v03.insert_into_table scheduled__2022-10-16T00:00:00+00:00 [running]> on host macbook-pro-de-user.local
[2024-01-02T20:31:57.454+0100] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='aida' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v03' AIRFLOW_CTX_TASK_ID='insert_into_table' AIRFLOW_CTX_EXECUTION_DATE='2022-10-16T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2022-10-16T00:00:00+00:00'
[2024-01-02T20:31:57.454+0100] {sql.py:274} INFO - Executing: 
            insert into table dag_runs(dt, dag_id) values('2022-10-16','dag_with_postgres_operator_v03')
        
[2024-01-02T20:31:57.458+0100] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-01-02T20:31:57.598+0100] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-01-02T20:31:57.622+0100] {sql.py:418} INFO - Running statement: 
            insert into table dag_runs(dt, dag_id) values('2022-10-16','dag_with_postgres_operator_v03')
        , parameters: None
[2024-01-02T20:31:57.623+0100] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/py_env/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/py_env/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/Users/user/Desktop/Learning/AIRFLOW-TUTORIAL/py_env/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "table"
LINE 2:             insert into table dag_runs(dt, dag_id) values('2...
                                ^

[2024-01-02T20:31:57.628+0100] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v03, task_id=insert_into_table, execution_date=20221016T000000, start_date=20240102T193156, end_date=20240102T193157
[2024-01-02T20:31:57.635+0100] {standard_task_runner.py:104} ERROR - Failed to execute job 14246 for task insert_into_table (syntax error at or near "table"
LINE 2:             insert into table dag_runs(dt, dag_id) values('2...
                                ^
; 61049)
[2024-01-02T20:31:57.684+0100] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2024-01-02T20:31:57.697+0100] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
